projects/vb6parse/snapshots/parsers/cst/library/environment/randomize/randomize_at_module_level.snap
---
source: projects/vb6parse/tests/library/environment/randomize.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: RandomizeStatement
      children:
        - kind: RandomizeKeyword
          text: Randomize
    - kind: Newline
      text: "\n"
