projects/vb6parse/snapshots/parsers/cst/library/environment/randomize/randomize_multiline_with_continuation.snap
---
source: projects/vb6parse/tests/library/environment/randomize.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: RandomizeStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RandomizeKeyword
                  text: Randomize
                - kind: Whitespace
                  text: " "
                - kind: Underscore
                  text: _
                - kind: Newline
                  text: "\n"
                - kind: Whitespace
                  text: "        "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: Timer
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
