projects/vb6parse/snapshots/parsers/cst/library/environment/randomize/randomize_preserves_whitespace.snap
---
source: projects/vb6parse/tests/library/environment/randomize.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: RandomizeStatement
      children:
        - kind: RandomizeKeyword
          text: Randomize
        - kind: Whitespace
          text: "    "
    - kind: Newline
      text: "\n"
